syntax = "proto3";

package posts;

option go_package = "proto/posts_comments";

service PostsCommentsService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (PostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  uint32 creator_id = 3;
  bool is_private = 4;
  repeated string tags = 5;
}

message DeletePostRequest {
  uint32 post_id = 1;
  uint32 creator_id = 2;
}

message UpdatePostRequest {
  uint32 post_id = 1;
  string title = 2;
  string description = 3;
  bool is_private = 4;
  repeated string tags = 5;
  uint32 creator_id = 6;
}

message GetPostRequest {
  uint32 post_id = 1;
  uint32 creator_id = 2;
}

message ListPostsRequest {
  uint32 page = 1;
  uint32 limit = 2;
  uint32 creator_id = 3;
}

message PostResponse {
  uint32 post_id = 1;
  string title = 2;
  string description = 3;
  uint32 creator_id = 4;
  string created_at = 5;
  string updated_at = 6;
  bool is_private = 7;
  repeated string tags = 8;
}

message ListPostsResponse {
  repeated PostResponse posts = 1;
}
